# waveplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AudioManipulator.hpp  MatrixFader.hpp  WaveLoader.hpp  buffers.hpp  main.cpp
